--- a/res/layout/fragment_list_worlds.xml
+++ b/res/layout/fragment_list_worlds.xml
@@ -3,21 +3,56 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
-    
-    <Button 
-		android:id="@+id/image_list_worlds"
-	    android:layout_marginTop="18dp"
-	    android:layout_width="80dp"
-		android:layout_height="80dp"	
-		android:layout_marginLeft="20dp"	
-	    android:background="@drawable/button_circle_shape"/>
-    
-	<TextView
-	    android:id="@+id/text_list_worlds"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:textSize="20sp"
-	    android:gravity="center_horizontal|center_vertical"
-	    android:text="22 out of 24 Cars"/>
-	    
+    <RelativeLayout 
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/button_circle_shape"> 
+	    <TextView 
+			android:id="@+id/circle_list_worlds"
+		    android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:gravity="center_horizontal"
+			android:layout_marginTop="25dp"
+			android:textColor="#ffffff"
+		    />
+	    <TextView 
+			android:id="@+id/points_list_worlds"
+		    android:layout_width="match_parent"
+			android:layout_height="wrap_content"	
+			android:layout_below="@id/circle_list_worlds"	
+			android:gravity="center_horizontal|center_vertical"
+			android:textColor="#065a9d" />
+    </RelativeLayout>
+    <RelativeLayout 
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="55dp">
+		<TextView
+		    android:id="@+id/text_list_worlds"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:textSize="12sp"
+		    android:textColor="#ffffff"
+		    android:gravity="center_horizontal|center_vertical"
+		    />
+		<ProgressBar 
+		    android:id="@+id/progress_bar_worlds"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:layout_below="@id/text_list_worlds"
+		    style="?android:attr/progressBarStyleHorizontal"
+			android:layout_marginLeft="15dp"
+			android:layout_marginRight="15dp"/>
+		<TextView
+		    android:id="@+id/percent_list_worlds"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:layout_below="@id/progress_bar_worlds"
+		    android:textSize="12sp"
+		    android:textColor="#ffffff"
+		    android:gravity="center_horizontal|center_vertical"
+		    />
+	</RelativeLayout>
 </LinearLayout>
