--- a/res/layout-land/fragment_main_menu.xml
+++ b/res/layout-land/fragment_main_menu.xml
@@ -2,18 +2,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="@drawable/shapes" >
+    android:background="@drawable/shapes"
+     >
 
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
         android:gravity="center"
         android:orientation="vertical" >
  		
  		<RelativeLayout 
  		    android:layout_width="match_parent"
- 		    android:layout_height="wrap_content">
+ 		    android:layout_height="wrap_content"
+ 		    >
  		    
  		    <TextView
             android:id="@+id/world_quiz"
@@ -43,16 +44,23 @@
 		        android:src="@drawable/ic_action_split"/>
 		    
  		</RelativeLayout>
-        
-        <Button 
+ 		
+ 		<LinearLayout 
+ 		    android:layout_width="match_parent"
+ 		    android:layout_height="wrap_content"
+ 		    android:orientation="horizontal"
+ 		    android:layout_marginTop="10dp"
+ 		    android:weightSum="1">
+ 		    
+ 		    <Button 
             android:id="@+id/play_main_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_selector"
+            android:layout_weight="0.5"
             android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="20dp"
-            android:textSize="20sp"
+            android:layout_marginRight="17.5dp"
+            android:layout_marginTop="12dp"
             android:text="@string/play"
             android:textColor="#ffffff"
             />
@@ -61,62 +69,82 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_selector"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="35dp"
+            android:layout_weight="0.5"
+            android:layout_marginLeft="17.5dp"
             android:layout_marginRight="35dp"
-            android:textSize="20sp"
+            android:layout_marginTop="12dp"
             android:text="@string/worlds"
             android:textColor="#ffffff"
             />
-        <Button 
+ 		</LinearLayout>
+ 		
+ 		<LinearLayout 
+ 		    android:layout_width="match_parent"
+ 		    android:layout_height="wrap_content"
+ 		    android:orientation="horizontal"
+ 		    android:weightSum="1">
+ 		    
+ 		    <Button 
             android:id="@+id/tutorial_main_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_selector"
+            android:layout_weight="0.5"
             android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="20dp"
-            android:textSize="20sp"
+            android:layout_marginRight="17.5dp"
+            android:layout_marginTop="12dp"
             android:text="@string/tutorial"
             android:textColor="#ffffff"
             />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <Button 
+            android:id="@+id/stats_main_circle_button"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            
-            android:orientation="horizontal" >
-	        
-            <ImageButton 
-	            android:id="@+id/stats_main_circle_button"
-	            android:layout_marginTop="18dp"
-	            android:layout_width="52sp"
-				android:layout_height="52sp"
-				android:src="@drawable/ic_action_network_cell"
-	            android:background="@drawable/button_circle_selector"/>
-            <ImageButton 
-	            android:id="@+id/awards_main_circle_button"
-	            android:layout_marginTop="18dp"
-	            android:layout_marginRight="25dp"
-	            android:layout_marginLeft="25dp"
-	            android:layout_width="52sp"
-				android:layout_height="52sp"
-				android:src="@drawable/ic_action_important"
-	            android:background="@drawable/button_circle_selector"/>
-            <ImageButton 
-	            android:id="@+id/stamps_main_circle_button"
-	            android:layout_marginTop="18dp"
-	            android:layout_width="52sp"
-				android:layout_height="52sp"
-				android:src="@drawable/ic_action_favorite"
-	            android:background="@drawable/button_circle_selector"/>
-        
-         </LinearLayout>
+            android:background="@drawable/button_selector"
+            android:layout_weight="0.5"
+            android:layout_marginLeft="17.5dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginTop="12dp"
+            android:text="@string/stats"
+            android:textColor="#ffffff"
+            />
+ 		</LinearLayout>
 
+ 		<LinearLayout 
+ 		    android:layout_width="match_parent"
+ 		    android:layout_height="wrap_content"
+ 		    android:orientation="horizontal"
+ 		    android:weightSum="1">
+ 		    
+ 		    <Button 
+            android:id="@+id/awards_main_circle_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_selector"
+            android:layout_weight="0.5"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="17.5dp"
+            android:layout_marginTop="12dp"
+            android:text="@string/awards"
+            android:textColor="#ffffff"
+            />
+        <Button 
+            android:id="@+id/stamps_main_circle_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_selector"
+            android:layout_weight="0.5"
+            android:layout_marginLeft="17.5dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginTop="12dp"
+            android:text="@string/stamps"
+            android:textColor="#ffffff"
+            />
+ 		</LinearLayout>
+ 		
     </LinearLayout>
-
     <ImageView
-      	android:layout_width="wrap_content"
+      	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:layout_alignParentBottom="true"
       	android:scaleType="fitEnd"
