--- a/res/layout/fragment_photo_question.xml
+++ b/res/layout/fragment_photo_question.xml
@@ -14,7 +14,7 @@
                android:layout_height="0dip"
                android:scaleType="fitXY"
                android:layout_weight="0.85"
-               android:src="@drawable/car1"/>
+               android:src="@drawable/ford_focus_2014"/>
          <!-- Botones de ayuda -->
        	 <LinearLayout
 		        android:layout_width="match_parent"
@@ -24,22 +24,17 @@
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_weight="0.5"
-		            android:layout_marginTop="2dp"
-		            android:layout_marginLeft="2dp"
-		            android:layout_marginRight="1dp"
-		            android:background="@drawable/button_selector"
+		            android:layout_marginRight="0.2dp"
+		            android:background="@drawable/button_no_corners_selector"
 		            android:src="@drawable/ic_action_share" />
 		        <ImageButton
 		            android:id="@+id/help_button"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_weight="0.5"
-		            android:layout_marginTop="2dp"
-		            android:layout_marginLeft="1dp"
-		            android:layout_marginRight="1dp"
-		             android:background="@drawable/button_selector"
+		            android:layout_marginLeft="0.2dp"
+		            android:background="@drawable/button_no_corners_selector"
 		            android:src="@drawable/ic_action_help" />
 		    </LinearLayout>    
-
   	</LinearLayout>
 </RelativeLayout>
