Varios cambiosVarios cambios
- Arreglado fondo del menu
- 30 Coches por Submundo
- 15 coches para desbloquear
- 2 SubMundos
- Cambia la imagen al pulsar
- jodido el tema del fade...

--- a/res/layout-land/fragment_main_menu.xml
+++ b/res/layout-land/fragment_main_menu.xml
@@ -148,6 +148,6 @@
       	android:layout_height="wrap_content"
       	android:layout_alignParentBottom="true"
       	android:scaleType="fitEnd"
-        android:src="@drawable/fondob" />
+        android:src="@drawable/fondo" />
 
 </RelativeLayout>
