--- a/res/layout/fragment_result_question.xml
+++ b/res/layout/fragment_result_question.xml
@@ -2,12 +2,14 @@
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
+   android:layout_gravity="center_vertical|center_horizontal"
    android:weightSum="1"
     >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
+       android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical">     
        	 
        	 <!-- Botones Respuestas -->
