--- a/res/layout/fragment_subworld.xml
+++ b/res/layout/fragment_subworld.xml
@@ -12,4 +12,27 @@
         android:horizontalSpacing="0dp"
         android:stretchMode="columnWidth"
         android:numColumns="3" />
+    
+    <ViewSwitcher
+            android:id="@+id/switcher"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:inAnimation="@anim/fade_in"
+            android:outAnimation="@anim/fade_out" >
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_half_closed_box" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_open_box" />
+        </ViewSwitcher>
+        
 </FrameLayout>
