--- a/res/anim/vibrate.xml
+++ b/res/anim/vibrate.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="100"
-    android:fromDegrees="-5"
+    android:duration="50"
+    android:fromDegrees="-10"
     android:pivotX="50%"
     android:pivotY="50%"
-    android:repeatCount="5"
-    android:repeatMode="reverse"
-    android:interpolator="@android:anim/linear_interpolator"
-    android:toDegrees="5" />
+    android:repeatCount="15"
+    android:repeatMode="restart"
+    android:toDegrees="10" />
