--- a/res/layout/container_list_worlds.xml
+++ b/res/layout/container_list_worlds.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/container_list_worlds"
-    android:layout_width="match_parent"
+
+<FrameLayout 
+    android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/shapes" >
-</LinearLayout>
+    android:background="@drawable/shapes">
+	<LinearLayout 
+	    android:id="@+id/container_list_worlds"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:orientation="vertical"
+	    android:background="@drawable/road_vertical" >
+	</LinearLayout>
+</FrameLayout>
