Sombras en foto coche

--- a/res/layout/fragment_photo_question2.xml
+++ b/res/layout/fragment_photo_question2.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
-   android:layout_height="wrap_content">
+   android:layout_height="match_parent">
     <!-- Imagen del coche -->
            <ImageView 
                android:id="@+id/photo_question"
@@ -9,6 +9,12 @@
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ford_focus_2014"/>
+           <ImageView
+                 android:id="@+id/shadoww"
+                 android:layout_width="match_parent"
+                 android:layout_height="12dp"
+                 android:scaleType="centerCrop"
+                 android:src="@drawable/shadow" />
             <ImageButton
 	           android:id="@+id/share_button"
 	           android:layout_width="wrap_content"
@@ -20,13 +26,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
                 android:background="@drawable/button_left_rounded_selector"
                 android:src="@drawable/ic_action_help" />
-             <ImageView 
-                android:layout_width="match_parent"
-                android:layout_height="12dp"
-                android:layout_below="@id/photo_question"
-                android:scaleType="centerCrop"
-                android:src="@drawable/shadow"/>
+           <ImageView
+                 android:id="@+id/shadoww2"
+                 android:layout_width="match_parent"
+                 android:layout_height="12dp"
+                 android:layout_alignBottom="@id/photo_question"
+                 android:scaleType="centerCrop"
+                 android:src="@drawable/shadow" />            
            
 </RelativeLayout>
