Sombreado foto coche y retoques varios

--- a/res/layout/container_question.xml
+++ b/res/layout/container_question.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container_question"
     android:layout_width="match_parent"
@@ -10,20 +9,19 @@
     <FrameLayout 
         android:id="@+id/fragment_photo"
     	android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-    	android:layout_weight="0.3"/>
+    	android:layout_height="0px"
+    	android:layout_weight="0.4"/>
     
     <FrameLayout 
         android:id="@+id/fragment_result"
-    	android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-    	android:layout_weight="0.7"
+    	android:layout_width="match_parent"
+    	android:layout_height="0px"
+    	android:layout_weight="0.6"
     	android:background="@drawable/road_vertical"/>        
         
     <FrameLayout 
         android:id="@+id/fragment_banner"
     	android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-/>
+    	android:layout_height="wrap_content"/>
          
 </LinearLayout>
