--- a/res/layout/fragment_banner_question.xml
+++ b/res/layout/fragment_banner_question.xml
@@ -1,15 +1,11 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-   xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="match_parent"
-   android:layout_height="match_parent"
-   android:gravity="bottom" >
-   <FrameLayout 
-       android:layout_width="match_parent"
-       android:layout_height="50dp"  
-       android:background="#ffffff">
-       <TextView 
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="PUBLICIDAD"/>
-   </FrameLayout>
+<RelativeLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"  
+    android:background="#ffffff">
+    <TextView 
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="PUBLICIDAD"/>
 </RelativeLayout>
