--- a/res/layout/fragment_result_question.xml
+++ b/res/layout/fragment_result_question.xml
@@ -8,7 +8,7 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="12dp"
 	    android:scaleType="center"
-	    android:src="@drawable/shadow2" /> 
+	    android:src="@drawable/shadow" /> 
 
 	<LinearLayout 
       android:layout_width="match_parent"
